<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/GreenText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:paddingTop="40dp"
    android:weightSum="8">

    <EditText
        android:id="@+id/editTextField1"
        style="@style/GreenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:hint="@string/field_1"
        android:inputType="number|numberDecimal|numberSigned" />

    <EditText
        android:id="@+id/editTextField2"
        style="@style/GreenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:hint="@string/field_2"
        android:inputType="number|numberDecimal|numberSigned" />

    <RadioGroup
        style="@style/GreenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/radioButtonOperation1_plus"
            style="@style/GreenText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/operation_1" />

        <RadioButton
            android:id="@+id/radioButtonOperation2_minus"
            style="@style/GreenText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/operation_2" />

        <RadioButton
            android:id="@+id/radioButtonOperation3_divide"
            style="@style/GreenText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/operation_3" />

        <RadioButton
            android:id="@+id/radioButtonOperation4_multiply"
            style="@style/GreenText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/operation_4" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxFloatValues"
        style="@style/GreenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:text="@string/float_values" />

    <CheckBox
        android:id="@+id/checkBoxSignedValues"
        style="@style/GreenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:text="@string/signed_values" />

    <TextView
        android:id="@+id/textViewResultField"
        style="@style/GreenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/result_field" />

    <Button
        android:id="@+id/calculateButton"
        style="@style/GreenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:onClick="calculate"
        android:text="@string/calculate_button" />

</LinearLayout>
